@@ -870,6 +870,10 @@ module Cucumber
           elements[2]
         end
 
+        def keyword_space
+          elements[3]
+        end
+
         def name
           elements[4]
         end
@@ -920,60 +924,51 @@ module Cucumber
             r4 = _nt_step_keyword
             s0 << r4
             if r4
-              s5, i5 = [], index
-              loop do
-                r6 = _nt_space
-                if r6
-                  s5 << r6
-                else
-                  break
-                end
-              end
-              r5 = SyntaxNode.new(input, i5...index, s5)
+              r5 = _nt_keyword_space
               s0 << r5
               if r5
-                r7 = _nt_line_to_eol
-                s0 << r7
-                if r7
-                  i8 = index
-                  s9, i9 = [], index
+                r6 = _nt_line_to_eol
+                s0 << r6
+                if r6
+                  i7 = index
+                  s8, i8 = [], index
                   loop do
-                    r10 = _nt_eol
-                    if r10
-                      s9 << r10
+                    r9 = _nt_eol
+                    if r9
+                      s8 << r9
                     else
                       break
                     end
                   end
-                  if s9.empty?
-                    self.index = i9
-                    r9 = nil
+                  if s8.empty?
+                    self.index = i8
+                    r8 = nil
                   else
-                    r9 = SyntaxNode.new(input, i9...index, s9)
+                    r8 = SyntaxNode.new(input, i8...index, s8)
                   end
-                  if r9
-                    r8 = r9
-                  else
-                    r11 = _nt_eof
-                    if r11
-                      r8 = r11
-                    else
-                      self.index = i8
-                      r8 = nil
-                    end
-                  end
-                  s0 << r8
                   if r8
-                    r13 = _nt_multiline_arg
-                    if r13
-                      r12 = r13
+                    r7 = r8
+                  else
+                    r10 = _nt_eof
+                    if r10
+                      r7 = r10
                     else
-                      r12 = SyntaxNode.new(input, index...index)
+                      self.index = i7
+                      r7 = nil
                     end
-                    s0 << r12
+                  end
+                  s0 << r7
+                  if r7
+                    r12 = _nt_multiline_arg
                     if r12
-                      r14 = _nt_white
-                      s0 << r14
+                      r11 = r12
+                    else
+                      r11 = SyntaxNode.new(input, index...index)
+                    end
+                    s0 << r11
+                    if r11
+                      r13 = _nt_white
+                      s0 << r13
                     end
                   end
                 end
