@@ -121,7 +121,7 @@ module Cucumber
       end
 
       rule step
-        comment space* step_keyword space* name:line_to_eol (eol+ / eof) multi:multiline_arg? white {
+        comment space* step_keyword keyword_space name:line_to_eol (eol+ / eof) multi:multiline_arg? white {
           def build
             if multi.respond_to?(:build)
               Ast::Step.new(step_keyword.line, step_keyword.text_value, name.text_value.strip, multi.build)
